@@ -42,3 +42,4 @@ test_format("peerj_article")
 test_format("amq_article")
 test_format("mdpi_article")
 test_format("mnras_article")
+test_format("copernicus_article")
