@@ -3,6 +3,8 @@ rticles 0.6 (unreleased)
 
 - Added the template for the SAGE Journals (thanks, @oguzhanogreden, #181).
 
+- Added the template for Copernicus Publications journals (thanks, @nuest, #172).
+
 rticles 0.5
 ---------------------------------------------------------------------
 
